<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A6A6A6"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A6A6A6">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="411dp"
            android:contentDescription="@string/face"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textEmotion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion5" />

        <TextView
            android:id="@+id/textEmotion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion1" />

        <TextView
            android:id="@+id/textEmotion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/_3"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion2" />

        <TextView
            android:id="@+id/textEmotion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_4"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion3" />

        <TextView
            android:id="@+id/textEmotion5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ProgressBar
            android:id="@+id/Emotion1Bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="170dp"
            android:layout_height="9dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="16dp"
            android:progressBackgroundTint="#A6A6A6"
            android:progressTint="#914e9e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion5" />

        <ProgressBar
            android:id="@+id/Emotion2Bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="170dp"
            android:layout_height="9dp"
            android:layout_marginTop="23dp"
            android:progressBackgroundTint="#A6A6A6"
            android:progressTint="#914e9e"
            app:layout_constraintEnd_toEndOf="@+id/Emotion1Bar"
            app:layout_constraintStart_toStartOf="@+id/Emotion1Bar"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion1" />

        <ProgressBar
            android:id="@+id/Emotion3Bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="170dp"
            android:layout_height="9dp"
            android:layout_marginTop="23dp"
            android:progressBackgroundTint="#A6A6A6"
            android:progressTint="#914e9e"
            app:layout_constraintEnd_toEndOf="@+id/Emotion2Bar"
            app:layout_constraintStart_toStartOf="@+id/Emotion2Bar"
            app:layout_constraintTop_toBottomOf="@+id/textEmotion2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>